added endpoint to verify an IP is mikrotik
